[metadata]
name = asyncselenium
version = 0.0.1
author = duanyongqiang
author_email = sysuduanyongqiang@163.com
description = A async selenium package to improve performance
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Yyonging/asyncselenium.git
project_urls =
    Bug Tracker = https://github.com/Yyonging/asyncselenium/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = asyncselenium
packages = find:
python_requires = >=3.6

[options.packages.find]
where = asyncselenium
